使用 Colaboratory 建立

--- a/期中實作_會計一a_吳泓緯_410600760.ipynb
+++ b/期中實作_會計一a_吳泓緯_410600760.ipynb
@@ -137,16 +137,16 @@
         "b=int(input('請輸入梯形下底長度：'))\n",
         "c=int(input('請輸入梯形的高度：'))\n",
         "d=float((a+b)*c/2)\n",
-        "print('上底長度為：',a,'公分',',','梯形下底長度為:',b,'公分',',','梯形面積為：',d,'平方公分')\n"
+        "print('梯形上底長度為：',a,'公分',',','梯形下底長度為:',b,'公分',',','梯形面積為：',d,'平方公分')\n"
       ],
       "metadata": {
         "id": "gUy9UyZ9mqEC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0dea27e6-7985-4c98-8638-9700a69f901e"
+        "outputId": "560ee48a-66b9-4e9f-fc62-e7407991c4ad"
       },
-      "execution_count": 69,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
             "請輸入梯形上底長度：4\n",
             "請輸入梯形下底長度：5\n",
             "請輸入梯形的高度：4\n",
-            "上底長度為： 4 公分 , 梯形下底長度為: 5 公分 , 梯形面積為： 18.0 平方公分\n"
+            "梯形上底長度為： 4 公分 , 梯形下底長度為: 5 公分 , 梯形面積為： 18.0 平方公分\n"
           ]
         }
       ]
@@ -215,7 +215,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(input('請輸入正整數'))\n",
+        "a=int(input('請輸入正整數：'))\n",
         "if a%2==0:\n",
         "  print(a,'為偶數!')\n",
         "else:\n",
@@ -226,15 +226,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0491fda1-be2c-49a0-ce46-0f25c256d739"
+        "outputId": "df353374-8095-452c-abf2-7025c76a113c"
       },
-      "execution_count": 70,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入正整數50\n",
+            "請輸入正整數：50\n",
             "50 為偶數!\n"
           ]
         }
