使用 Colaboratory 建立

--- a/0606.ipynb
+++ b/0606.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0606.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPiOG4ZxY6YhyebIMOCdQ3Z",
+      "authorship_tag": "ABX9TyMdF+cetuAhg8T0qYPud5Wx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,7 @@
         "id": "-BQUqxRCLbVZ",
         "outputId": "71a9d385-9bd3-46af-dda0-410369a716ac"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -93,7 +93,7 @@
         "id": "EmO5BMqQL9on",
         "outputId": "023724b0-736e-4da6-efa8-845028d79da5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +120,7 @@
         "id": "Y4h7YjGlMbgj",
         "outputId": "de54433a-f44d-48a0-aeb3-bec257c5f674"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
         "id": "ynbouQisNNMU",
         "outputId": "fc053db8-e975-453d-e31d-260c02f9746d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -169,7 +169,7 @@
         "id": "48g-FeqcNQwo",
         "outputId": "ef917aa2-2a5f-44f1-cf5b-38481d18997b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "id": "1VYp-hNwNVMO",
         "outputId": "8a4a3a4b-ba0a-4900-fffb-e290a483b6b8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,7 +223,7 @@
         "id": "hwGFYvf0NjSl",
         "outputId": "a52106dc-e11b-43d8-a083-5a30dc87f3d9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
         "id": "UHjFDOYEOS0H",
         "outputId": "539e1fbf-3c37-461a-9ed0-dae620e2a6ef"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "id": "57lEgoYAOWAQ",
         "outputId": "1c2c4049-3020-41b6-fcec-9897ab8b4ba0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -303,7 +303,7 @@
         "id": "0zSwZnm5OrFX",
         "outputId": "ec80cbe1-4a41-4778-f9ec-ef7397639fe3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,7 +329,7 @@
         "id": "bb_7DOaTOw_v",
         "outputId": "546de80a-9e3f-4b74-ec39-aa67bf3f85ea"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -363,7 +363,7 @@
         "id": "0wGGp-kJO5Zd",
         "outputId": "048f8cd9-355b-4ab2-aed8-5fdf5f579aad"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +395,7 @@
         "id": "zPX4anK5RDSH",
         "outputId": "e4968d86-e240-474a-bb18-c5ad60a321e4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,7 +422,7 @@
         "id": "itSV51hmTYCi",
         "outputId": "4feb3a58-e221-4583-b0f6-58bd47e44b91"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +447,7 @@
         "id": "vpkQXE5jUFRz",
         "outputId": "db85a4b5-e039-4562-faad-abc84d3d2d2a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
         "id": "WPY2s3hnUWgh",
         "outputId": "30b53371-0f47-4e22-fac4-9b2b8dd8bd1c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +499,7 @@
         "id": "qctM_6XDVkZE",
         "outputId": "ec67a78c-1dde-4959-bb18-a46b7a3ef13d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +525,7 @@
         "id": "wNLb1aXLWV0q",
         "outputId": "77ca2d52-a086-4984-d31d-8bafb7624f98"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +550,7 @@
         "id": "NsKQDx4KWkVI",
         "outputId": "296b5f53-8505-46cb-8275-ff4c593530c1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,9 +578,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZnDZ_OoXMCG",
-        "outputId": "e3a2adc9-7b59-46a5-f647-eb1cbef670c4"
+        "outputId": "b17d3bbe-c82b-4f7e-b54a-874c47e75b9d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,63 @@
         "id": "HanoS7NOYQYL",
         "outputId": "6371d870-007a-4067-d880-530455866e68"
       },
-      "execution_count": 46,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "編號 1 name tom\n",
+            "編號 2 name mary\n",
+            "編號 3 name tony\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a= [85,79,93]\n",
+        "c= [\"國文成績\",\"數學成績\",\"英文成績\"]\n",
+        "for b in range(len(a)):\n",
+        "  print(c[b],a[b])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LQ5jY0DzaD0V",
+        "outputId": "3fcc858f-364a-4a24-c95b-03529f0969be"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "國文成績 85\n",
+            "數學成績 79\n",
+            "英文成績 93\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [\"tom\",\"mary\",\"tony\"]\n",
+        "b = [1,2,3]\n",
+        "for c in range(len(a)):\n",
+        "  print(\"編號\",b[c],\"name\",a[c])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QNjVC4emYZU7",
+        "outputId": "2d5c1d99-fca4-49c5-dbef-e61bcd7b9771"
+      },
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
